# Codex-addict

./: .gitignore  IntraCodex-Guide.html  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
config/: providers.yaml
docs/: context-pipeline.md  intra-codex-blog-guide.md  intra-codex-embed.html  wiki-intro-div-only.html
skills/: explore.md  frontend.md  html-report.md  review.md
src/: MarkdownMessage.tsx  api.ts  main.tsx  markdown.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: context.rs  main.rs
