[package]
name = "intra-codex"
version = "0.1.0"
description = "Intra Codex desktop workbench"
authors = ["Intra Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
